<resources>
    <string name="app_name">Item Giveaway</string>
    <string name="enter_email">enter email</string>
    <string name="hint_enter_password">enter password</string>
    <string name="login">LOGIN</string>
    <string name="button_create_account">Not register yet? SignUp now</string>
    <string name="hint_enter_name">enter name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="choose_category">Choose category</string>
    <string name="enter_mobile_number_optional">Enter mobile number(Optional)</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="please_wait">please wait…</string>
    <string name="donor_address">Donor Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="update_profile">update profile</string>
    <string name="logout">Logout</string>
    <string name="giveaway">GIVEAWAY</string>
    <string name="search">Search</string>
    <string name="donate_item">DONATE ITEM</string>
    <string name="profile">Profile</string>
    <string name="needy">Needy</string>
    <string name="donate">Donate</string>
    <string name="post">Post</string>
    <string name="about_us">About Us</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description_optional">Enter Description(Optional)</string>
    <string name="text">TEXT</string>
    <string name="image">IMAGE</string>

</resources>