<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00897b"
                android:gravity="center"
                android:padding="10dp"
                android:text="Post"
                android:textAlignment="gravity"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/enter_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />



            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text" />

                <RadioButton
                    android:id="@+id/radio_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image" />
            </RadioGroup>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:background="@drawable/rectangle_post_image">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/dialog_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:lines="7"
                    android:hint="Write Post"
                    android:visibility="gone"
                    android:background="@null"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dialog_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:src="@drawable/ic_baseline_add_a_photo_24"
                    android:layout_margin="5dp"/>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/enter_description_optional" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:textColor="@color/white">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="POST"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:elevation="2dp"
                    android:visibility="gone"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:text="@string/please_wait"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>